[package]
name = "mothership"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
hyper = "1.6"
tower = "0.5"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sled = { version = "0.34", features = ["compression"]}
reqwest = { version = "0.12", features = ["blocking", "json"] } # todo - this is only a test dep
tracing = {version = "0.1.41"}
tracing-subscriber = "0.3.19"
futures = "0.3.31"
chrono =  "0.4.41"
tracing-appender = "0.2.3"
uuid = {version = "1.17", features = ["v4"] }
